reimplement stochasticpack